--- a/sass/pages/_animations.scss
+++ b/sass/pages/_animations.scss
@@ -86,7 +86,7 @@
 }
 .paragraphe1, .paragraphe2 {
     text-overflow: ellipsis;
-    white-space: wrap;
+    white-space: normal;
     overflow: hidden;
 }
 .btn_menu_intitule {
